--- a/pvannuity/pvannuity-4.html
+++ b/pvannuity/pvannuity-4.html
@@ -16,9 +16,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <!---------------- SLIDE 7 - content ******************* -->
-        <div id="slide7" class="slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Present Value of Annuities</h2>
@@ -28,58 +26,29 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-10.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>We can also use the TVM formula to find the PV of an annuity by adding the PV of each individual cash flow.
-                            <div class="bottom-space">
-                                <img src="./images/tvm_sample_equation.png" class="img-fluid " alt="">
-                            </div>
-                        </p>
-                        <p class="question">What's the PV of an ordinary annuity that pays $100 per year for 3 years at 10% interest?</p>
-                        <div class="bottom-space">
-                            <img src="./images/pv_ordinary_annuity_timeline.png" class="img-fluid" alt=""><br>
-                        </div>
-                        <p>First, calculate the PV of each of the 3 payments separately.
-                            <div class="row bottom-space">
-                                <div class="col-12 col-sm-12 col-md-4">
-                                    <p><b>PV of Payment 1</b>
-                                        <img src="./images/pv_ordinary_annuity_pmt1.png" class="img-fluid " alt=""></p>
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-4">
-                                    <p><b>PV of Payment 2</b>
-                                        <img src="./images/pv_ordinary_annuity_pmt2.png" class="img-fluid " alt=""></p>
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-4">
-                                    <p><b>PV of Payment 3</b>
-                                        <img src="./images/pv_ordinary_annuity_pmt3.png" class="img-fluid " alt=""></p>
-                                </div>
-                            </div>
-                            <br>
-                            <p>Then add the 3 payments together to get the PV of the annuity.</p>
-                            <div class="bottom-space">
-                                <img src="./images/pva_equals_sum_of_pv.png" class="img-fluid" alt="">
-                            </div>
-                        </p>
+                        <p>You should also know how to use the TVM buttons on your financial calculators to find PVA:<br>
+                            <img src="../images/pva_example1_finc_calc.png" class="img-fluid " alt=""></p>
+                        <p>FV is 0 because, though there are regularly scheduled payments, there is no lump sum paid at the end of 3 years. If there were a lump sum paid at the end of the term, it would be positive because, as usual, PV and FV are opposite signs (+/-).</p>
+                        <p class="alert">Always make sure your financial calculator is on the END mode. This is the most cmomon mistake made on exams.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">7</div>
+                    <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <a type="button" class="btn" href="./pvannuity-3.html">Back</a>
                     <a type="button" class="btn" href="./pvannuity-5.html">Continue</a>
                 </div>
             </div>
-
         </div>
-
-
 
 
     </div> <!--  end of container -->
