--- a/pvannuity/pvannuity-8.html
+++ b/pvannuity/pvannuity-8.html
@@ -16,9 +16,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <!---------------- SLIDE 9 - CONTENT ********************** -->
-        <div id="slide9" class="slide">
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Present Value of Annuities</h2>
@@ -28,31 +26,31 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-10.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">What's the PV of an ordinary annuity that pays $100 per year for 3 years at 10% interest?</p>
-                        <p class="answer">The answer is<br>
-                            <img src="./images/tvm4_pva_example1_answer.png" class="img-fluid " alt=""></p>
-                        <p>Click Help if you don't understand how to calculate the answer. If you got the right answer, click Continue.</p>
+                        <p>On a financial calculator, the problem would look like this:<br>
+                            <img src="../images/combo_example3_finc_calc.png" class="img-fluid " alt="calculator inputs to for combined calculation"><br>
+                            Note that PV and FV are always opposite signs. PV is a negative number from your perspective, because there is outflow of cash to buy the bond today. FV is a positive number because you will receive an inflow of cash on the maturity date.
+                        </p>
+
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-5 col-sm-3">
-                    <div class="page-number">9</div>
+                <div class="col-1">
+                    <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="./pvannuity-2.html">Back</a>
-                    <a type="button" class="btn" href="./pvannuity-4.html">Continue</a>
+                    <a type="button" class="btn" href="./pvannuity-7.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-9.html">Continue</a>
                 </div>
             </div>
-        </div>
-        <!---------------- end SLIDE 9 - CONTENT ********************** -->
 
+        </div>
 
     </div> <!--  end of container -->
 
