--- a/pvannuity/pvannuity-9.html
+++ b/pvannuity/pvannuity-9.html
@@ -16,9 +16,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <!---------------- SLIDE 10 - CONTENT *********** -->
-        <div id="slide10" class="slide stop">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Present Value of Annuities</h2>
@@ -28,39 +26,32 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-10.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>A PVA Factor table can also be used to find PVA. The PVA Factor replaces the number within the brackets.<br>
-                            <img src="./images/tvm4_pva_factor.png" class="img-fluid " alt=""></p>
-                        <p>Locate the intersection of the n (at left) and i (at top) to find the PVA Factor. Then multiply the PVA Factor by CF to calculate PVA.</p>
-                        <div class="row">
-                            <div class="col-12 col-sm-12 col-md-6">
-                                <img src="./images/tvm4_pva_factor_table.jpg" class="img-fluid " alt="">
-                            </div>
-                            <div class="col-12 col-sm-12 col-md-6">
-                                <br>
-                                <img src="./images/tvm4_pva_factor_calculation.png" class="img-fluid " alt="">
-                            </div>
-                        </div>
+                        <p>Solving a combination problem follows basically the same path, though it may require more calculation. The steps are always the same.</p>
+                        <ul>
+                            <li>Determine whether the problem involves an annuity, a lump sum, or a combination of the two.</li>
+                            <li>Determine which variables you do and don't know: interest rate, number of years, compounding and CF frequency, amount of the CFs, PV amount, or FV amount.</li>
+                            <li>Solve for the unknown variable(s).</li>
+                        </ul>
+
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">10</div>
+                    <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
-                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
+                    <a type="button" class="btn" href="./pvannuity-8.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-10.html">Continue</a>
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
