--- a/navbar.html
+++ b/navbar.html
@@ -14,5 +14,22 @@
     <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
 </nav>
 
+
+<!-- page number and buttons  -->
+
+
+<div class="row">
+    <div class="col-1">
+        <div class="page-number"></div>
+    </div>
+    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+        <a type="button" class="btn" href="./pvannuity-4.html">Back</a>
+        <a type="button" class="btn" href="./pvannuity-6.html">Continue</a>
+    </div>
+</div>
+
+
+<!-- mathjax script  -->
+
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
 </script>
