--- a/pvannuity-12 copy.html
+++ b/pvannuity-12 copy.html
@@ -46,7 +46,7 @@
                                     <label>C) Combination (PVA and PV)</label><br>
 
                                 </form>
-                                <button onclick="exercise_1()" type="button" class="btn calculate-btn">Submit</button>
+                                <button type="button" class="btn ann1 calculate-btn">Submit</button>
                             </div>
                             <br>
                             <div class="answer" id="answer-ex1"></div>
@@ -63,7 +63,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">24</div>
+                </div>
+            </div>
         </div>
 
 
@@ -100,7 +104,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">25</div>
+                </div>
+            </div>
         </div>
 
 
@@ -157,7 +165,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">26</div>
+                </div>
+            </div>
         </div>
 
 
@@ -198,7 +210,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">27</div>
+                </div>
+            </div>
         </div>
 
 
@@ -243,7 +259,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">28</div>
+                </div>
+            </div>
         </div>
 
 
@@ -288,7 +308,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">29</div>
+                </div>
+            </div>
         </div>
 
 
@@ -341,7 +365,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">30</div>
+                </div>
+            </div>
         </div>
 
 
@@ -382,7 +410,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">31</div>
+                </div>
+            </div>
         </div>
 
 
@@ -426,7 +458,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">32</div>
+                </div>
+            </div>
         </div>
 
 
@@ -475,7 +511,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">33</div>
+                </div>
+            </div>
         </div>
 
 
@@ -527,7 +567,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">34</div>
+                </div>
+            </div>
         </div>
 
 
@@ -563,7 +607,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">35</div>
+                </div>
+            </div>
         </div>
 
 
@@ -619,7 +667,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">36</div>
+                </div>
+            </div>
         </div>
 
 
@@ -660,7 +712,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">37</div>
+                </div>
+            </div>
         </div>
 
 
@@ -703,7 +759,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">38</div>
+                </div>
+            </div>
         </div>
 
 
@@ -750,7 +810,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">39</div>
+                </div>
+            </div>
         </div>
 
 
@@ -803,7 +867,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">40</div>
+                </div>
+            </div>
         </div>
 
 
@@ -838,7 +906,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">41</div>
+                </div>
+            </div>
         </div>
 
 
@@ -894,7 +966,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">42</div>
+                </div>
+            </div>
         </div>
 
 
@@ -933,7 +1009,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">43</div>
+                </div>
+            </div>
         </div>
 
 
@@ -979,7 +1059,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">44</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1027,7 +1111,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">45</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1079,7 +1167,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">46</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1115,7 +1207,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">47</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1171,7 +1267,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">48></div>
+                </div>
+            </div>
         </div>
 
 
@@ -1220,7 +1320,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">49</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1265,7 +1369,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">50</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1314,7 +1422,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">51</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1370,7 +1482,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">52</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1412,7 +1528,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">53</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1457,7 +1577,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">54</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1506,7 +1630,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">55</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1552,7 +1680,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">56</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1594,7 +1726,11 @@
                     <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">57</div>
+                </div>
+            </div>
         </div>
 
 
@@ -1625,12 +1761,17 @@
                     <button type="button" class="continue btn">Finish</button>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-1">
+                    <!-- <div class="page-number">58</div> -->
+                    <br>
+                </div>
+            </div>
         </div>
         <!-- *************************** end exercises *************************** -->
 
 
-
+    </div> <!-- End of allSlides div -->
     </div> <!--  end of container -->
 
 
