--- a/pvannuity/pvannuity-10.html
+++ b/pvannuity/pvannuity-10.html
@@ -16,41 +16,58 @@
 <body>
     <div class="container-fluid">
 
-        <!---------------- SLIDE 11 - CONTENT -->
-        <div id="slide11" class="slide">
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Present Value of Annuities</h2>
-                    <!-- <h3 class="secondary-title">Introduction</h3> -->
+                    <!-- <h3 class="secondary-title">Exercises</h3> -->
                 </div>
             </div>
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-6.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./pvannuity-10.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>You should also know how to use the TVM buttons on your financial calculators to find PVA:<br>
-                            <img src="./images/tvm4_pva_example1_finc_calc.png" class="img-fluid " alt=""></p>
-                        <p>FV is 0 because, though there are regularly scheduled payments, there is no lump sum paid at the end of 3 years. If there were a lump sum paid at the end of the term, it would be positive because, as usual, PV and FV are opposite signs (+/-).</p>
-                        <p class="note">Always make sure your financial calculator is on the END mode. This is the most cmomon mistake made on exams.</p>
+
+                        <h4>Exercise 1: Identify the Problem Type/Equation</h4>
+                        <p>Is this question about an annuity, lump sum, or a combination of the two?</p>
+                        <p class="question">What is the present value of an ordinary annuity that pays $100 semi-annually for 10 years at 4% interest?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="">
+
+                                    <input id="pva-ex1" type="radio" name="option" value="optA">
+                                    <label>A) Annuity (PVA)</label><br>
+
+                                    <input id="pv-ex1" type="radio" name="option" value="optB">
+                                    <label>B) Lump Sum (PV)</label><br>
+
+                                    <input id="combine-ex1" type="radio" name="option" value="optC">
+                                    <label>C) Combination (PVA and PV)</label><br>
+
+                                </form>
+                                <button type="button" class="btn ann1 calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex1"></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">11</div>
+                    <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="./pvannuity-1.html">Back</a>
-                    <a type="button" class="btn" href="./pvannuity-3.html">Continue</a>
+                    <a type="button" class="btn" href="./pvannuity-9.html">Back</a>
+                    <a type="button" class="btn" href="./pvannuity-11.html">Continue</a>
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
